<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  
  <groupId>cmssi.util</groupId>
  <artifactId>lyson</artifactId>
  <version>0.3</version>
  
  <name>lyson</name>
  <description>Lazy JSON</description>
  
  <properties>
  	<sonar.projectKey>cmunilla_Lyson</sonar.projectKey>
    <sonar.organization>cmunilla</sonar.organization>
    <sonar.host.url>https://sonarcloud.io</sonar.host.url>
    <sonar.login>5be2ff98dcda42763eb13f0c8775eec87be6eb4c</sonar.login>
    <sonar.core.codeCoveragePlugin>jacoco</sonar.core.codeCoveragePlugin>
    <sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
    <sonar.jacoco.reportPath>${project.basedir}/target/jacoco.exec</sonar.jacoco.reportPath>
  </properties>
  
  <dependencies>  		
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.8.1</version>
			<scope>test</scope>
		</dependency>
  </dependencies>
  
  <build>
		<plugins>
	        <plugin>
	          <artifactId>maven-compiler-plugin</artifactId>
	          <version>3.8.0</version>
	          <configuration>
	            <source>11</source>
	            <target>11</target>
	            <fork>true</fork>
	          </configuration>
	        </plugin>
	        <plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.18.1</version>
				<configuration>
					<argLine>${surefire.argLine} -XX:MaxPermSize=512m</argLine>
				</configuration>
				<dependencies>
					<dependency>
						<groupId>org.apache.maven.surefire</groupId>
						<artifactId>common-junit48</artifactId>
						<version>2.18.1</version>
					</dependency>
				</dependencies>
			</plugin>
			<plugin>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>2.12</version>
				<executions>
					<execution>
						<id>default-integration-test</id>
						<goals>
							<goal>integration-test</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
	         <plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.8.4</version>
				<configuration>
					<append>true</append>
				</configuration>
				<executions>
					<execution>
						<id>default-prepare-agent</id>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
						<configuration>
							<propertyName>surefire.argLine</propertyName>
						</configuration>
					</execution>
					<execution>
						<id>default-prepare-agent-integration</id>
						<goals>
							<goal>prepare-agent-integration</goal>
						</goals>
						<configuration>
							<destFile>${sonar.jacoco.reportPath}</destFile>
						</configuration>
					</execution>
					<execution>
						<id>default-jacoco-site</id>
						<phase>verify</phase>
						<goals>
							<goal>report</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
	        <plugin>
		        <groupId>org.apache.maven.plugins</groupId>
		        <artifactId>maven-jar-plugin</artifactId>
		        <configuration>
		          <archive>
		            <manifestFile>target/outputManifest/MANIFEST.MF</manifestFile>
		          </archive>
		        </configuration>
      		</plugin>
			<plugin>
				<groupId>org.apache.felix</groupId>
				<artifactId>maven-bundle-plugin</artifactId>
          		<version>2.5.3</version>
                <extensions>true</extensions>
                <executions>
                	<execution>
                		<phase>compile</phase>
                		<goals>
                			<goal>manifest</goal>
                		</goals>                		
						<configuration>
							<manifestLocation>target/outputManifest/</manifestLocation>
							<instructions>								
								<Built-By>cmunilla@cmssi.fr</Built-By>
								<Automatic-Module-Name>cmssi.lyson</Automatic-Module-Name>
								<_nouses>true</_nouses>  
								<_nodefaultversion>true</_nodefaultversion>
								<_failok>true</_failok>
							</instructions>
						</configuration>
                	</execution>
                </executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-checkstyle-plugin</artifactId>
				<version>3.0.0</version>
				<executions>
					<execution>
						<id>validate</id>
						<phase>validate</phase>
						<configuration>
							<configLocation>${project.basedir}/checkstyle-sun.xml</configLocation>
							<suppressionsLocation>${project.basedir}/checkstyle-suppressions.xml</suppressionsLocation>
							<encoding>UTF-8</encoding>
							<consoleOutput>false</consoleOutput>
							<failsOnError>false</failsOnError>
							<excludes>**/module-info.java</excludes>
						</configuration>
						<goals>
							<goal>check</goal>
						</goals>
					</execution>
				</executions>
                   <dependencies>
                       <dependency>
                           <groupId>com.puppycrawl.tools</groupId>
                           <artifactId>checkstyle</artifactId>
                           <version>8.18</version>
                       </dependency>
                   </dependencies>
			</plugin>
		</plugins>
	</build>
	
</project>